trunk/Archive/d992aed165e1bf379c57da03f88813a4-61c3814520a8d4318f681038dc4b4da7/output
main.cpp: In function 'int main(int, char**)':
main.cpp:9:21: error: 'atoi' was not declared in this scope
   c.a = atoi(argv[1]);
                     ^
main.cpp:11:43: error: '__stosb' was not declared in this scope
   __stosb((unsigned char*)&c, 0, sizeof(c));
                                           ^
main.cpp:12:29: error: 'printf' was not declared in this scope
   printf("%u %u\n", c.a, c.b);
                             ^
